Wed Jun  7 12:26:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Update licences.  Copyright is now held by BrightStation, which
	  is the new name for the part of what used to be Dialog which is
	  running this project.

Wed Jun  7 11:32:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Alter testsuite so that the nettests can work with sleepycat
	  databases if desired.

Tue Jun  6 19:10:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix nettest to use backend managers rather than inmemory's indexing.

Tue Jun  6 18:54:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updated socketclient / socketserver to pass the collapse key
	  around with the mset items.

Tue Jun  6 18:34:36 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Update BackendManager to accept arbitrary numbers of database
	  parameters, and to cope properly if the datadir isn't specified
	  (ie, leave the filenames alone).

	* Turn off indexing code built into InMemory databases: they now need
	  to have their indexing done for them externally.

	* Add debugging code to net_document.cc

	* Make omprogsrv use a backend manager to perform its indexing.

Tue Jun  6 16:59:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Separate BackendManager from rest of code in apitest, and put it
	  into testsuite, ready for use in other tests.

Tue Jun  6 15:38:30 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented a version of SleepyDatabase::do_get_all_keys().
	  Untested as yet.

Tue Jun  6 15:01:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added exception handling to scripting language bindings.

Tue Jun  6 13:11:15 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stop using vectors of OmKeys, now use map<om_keyno, OmKey>
	  everywhere.

Tue Jun  6 13:08:58 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Beginnings of Perl5 bindings.
